--- a/public/templates/homepage.html
+++ b/public/templates/homepage.html
@@ -306,5 +306,15 @@
         </div>
       </div>
     </main>
+    <footer class="footer">
+      <div class="content has-text-centered">
+        <p>
+          <a href=" ">Terms</a>
+          <a href=" ">Privacy</a>
+          <a href=" ">Accessibility</a>
+          <a href=" ">Help</a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
