--- a/public/templates/homepage.html
+++ b/public/templates/homepage.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.cdnfonts.com/css/bebas-neue" rel="stylesheet" />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
@@ -12,25 +14,22 @@
     <title>Scriptomatic - Homepage</title>
   </head>
   <body>
-    <nav class="navbar">
-      <div class="navbar-brand">
-        <a href="our website">
-          <img src="../../assets/logo.png" width="60" height="60" />
-          <h1
-            class="is-size-3 pb-4 has-text-weight-bold is-black"
-            style="float: right"
-          >
-            SCRIPTOMATIC
-          </h1>
+    <nav class="main-nav">
+      <div class="columns has-text-centered">
+        <a class="column is-narrow" href="our website" id="logo">
+          <img src="../../assets/logo.png" width="80" id="logo-img" />
         </a>
       </div>
     </nav>
     <main class="container main-container">
+      <h1 class="column is-size-1 has-text-weight-bold" id="title">
+        SCRIPTOMATIC
+      </h1>
       <div class="columns is-multiline is-tablet">
         <div class="column is-two-fifths">
-          <h1 class="is-size-3 is-size-4-mobile pb-4">
+          <h2 class="is-size-3 is-size-4-mobile pb-4">
             Find the scripts you need
-          </h1>
+          </h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
             asperiores eveniet vitae similique possimus voluptate, voluptates
