--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,10 +10,10 @@
     padding-left: 0;
 }
 
-/* .navbar {
+.navbar {
     background-color: #BABFCD;
     height: 10vh;
-} */
+}
 
 #logo, #logo-img, #title {
 
