--- a/public/templates/agent-home.html
+++ b/public/templates/agent-home.html
@@ -13,6 +13,34 @@
     <title>Scriptomatic - Agent</title>
   </head>
   <body>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <a href="https://bulma.io">
+          <img src="../../assets/logo.png" width="80" id="logo-img" />
+        </a>
+
+        <a
+          role="button"
+          class="navbar-burger"
+          aria-label="menu"
+          aria-expanded="false"
+          data-target="navMenu"
+        >
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
+
+      <div class="navbar-menu" id="navMenu">
+        <div class="navbar-end">
+          <div class="navbar-item">
+            <a class="navbar-item">Home</a>
+            <a class="button is-light"> Log out </a>
+          </div>
+        </div>
+      </div>
+    </nav>
     <!-- <nav class="main-nav">
       <div>
         <a href="our website" id="logo">
@@ -20,14 +48,14 @@
         </a>
       </div>
     </nav> -->
-    <nav class="columns" id="nav">
+    <!-- <nav class="columns" id="nav">
       <div class="column is-1" id="nav-logo">
         <a href="https://bulma.io" id="logo">
           <img src="../../assets/logo.png" width="60" id="logo-img" />
         </a>
-      </div>
+      </div> -->
 
-      <div class="column nav-menu" id="nav-menu">
+    <!-- <div class="column nav-menu" id="nav-menu">
         <ul>
           <li class="li-nav">
             <a class="button is-light"> Log out </a>
@@ -35,8 +63,8 @@
           <li class="li-nav"><a class="navbar-item"> My cart (0) </a></li>
           <li class="li-nav"><a class="navbar-item"> Home </a></li>
         </ul>
-      </div>
-    </nav>
+      </div> -->
+    <!-- </nav> -->
     <div class="columns is-mobile" id="main">
       <div class="column is-one-quarter is-tablet" id="menu-sidebar">
         <aside class="menu">
@@ -58,4 +86,26 @@
       </main>
     </div>
   </body>
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      // Get all "navbar-burger" elements
+      const $navbarBurgers = Array.prototype.slice.call(
+        document.querySelectorAll(".navbar-burger"),
+        0
+      );
+
+      // Add a click event on each of them
+      $navbarBurgers.forEach((el) => {
+        el.addEventListener("click", () => {
+          // Get the target from the "data-target" attribute
+          const target = el.dataset.target;
+          const $target = document.getElementById(target);
+
+          // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+          el.classList.toggle("is-active");
+          $target.classList.toggle("is-active");
+        });
+      });
+    });
+  </script>
 </html>
