--- a/public/templates/writer-home.html
+++ b/public/templates/writer-home.html
@@ -5,10 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.cdnfonts.com/css/bebas-neue" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/style.css" />
     <title>Scriptomatic - Writer</title>
   </head>
@@ -35,8 +33,21 @@
       <div class="navbar-menu" id="navMenu">
         <div class="navbar-end">
           <div class="navbar-item">
-            <a class="navbar-item">Home</a>
-            <a class="button is-light"> Log out </a>
+            <button class="home-button">
+              <span class="icon is-small">
+                <i class="fa fa-home fa-2x"></i>
+              </span>
+            </button>
+            <button class="notif-button">
+              <span class="icon is-small">
+                <i class="fa fa-bell fa-lg"></i>
+              </span>
+            </button>
+            <button class="log-off-button">
+              <span class="icon is-small">
+                <i class="fa fa-sign-out fa-2x"></i>
+              </span>
+            </button>
           </div>
         </div>
       </div>
