updated styling code

--- a/public/templates/writer-home.html
+++ b/public/templates/writer-home.html
@@ -35,17 +35,17 @@
           <div class="navbar-item">
             <button class="home-button">
               <span class="icon is-small">
-                <i class="fa fa-home fa-2x"></i>
+                <a class="fa fa-home fa-2x"></a>
               </span>
             </button>
             <button class="notif-button">
               <span class="icon is-small">
-                <i class="fa fa-bell fa-lg"></i>
+                <a class="fa fa-bell fa-lg"></a>
               </span>
             </button>
             <button class="log-off-button">
               <span class="icon is-small">
-                <i class="fa fa-sign-out fa-2x"></i>
+                <a class="fa fa-sign-out fa-2x"></a>
               </span>
             </button>
           </div>
