--- a/public/templates/writer-home.html
+++ b/public/templates/writer-home.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.cdnfonts.com/css/bebas-neue" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="../css/style.css" />
     <title>Scriptomatic - Writer</title>
   </head>
@@ -57,9 +63,9 @@
       <div class="column is-one-quarter is-tablet" id="menu-sidebar">
         <aside class="menu">
           <ul class="menu-list">
-            <li><a>Posted Scripts</a></li>
-            <li><a>Workspace</a></li>
-            <li><a>View Messages</a></li>
+            <li><a class="is-size-5 is-size-6-mobile">Posted Scripts</a></li>
+            <li><a class="is-size-5 is-size-6-mobile">Workspace</a></li>
+            <li><a class="is-size-5 is-size-6-mobile">View Messages</a></li>
           </ul>
         </aside>
       </div>
