--- a/public/templates/agent-purchased.html
+++ b/public/templates/agent-purchased.html
@@ -73,47 +73,16 @@
         </aside>
       </div>
       <main class="column">
-        <div id="browse" class="pl-4">
+        <div id="purchased" class="pl-4">
           <h1
             class="is-size-2 is-size-4-mobile has-text-weight-bold pb-5"
-            id="browse-title"
+            id="purchased-title"
           >
-            Browse
+            Purchased Scripts
           </h1>
-          <form id="search-script">
-            <div class="field is-grouped">
-              <p class="control is-expanded">
-                <input class="input" type="text" placeholder="Find a script" />
-              </p>
-              <p class="control">
-                <a class="button is-info"> Search </a>
-              </p>
-            </div>
 
-            <div class="field is-grouped">
-              <label class="label">Search by:&nbsp;</label>
-              <div class="control is-expended">
-                <label class="radio">
-                  <input type="radio" name="answer" id="genre" checked />
-                  Genre
-                </label>
-              </div>
-              <div class="control">
-                <label class="radio">
-                  <input type="radio" name="answer" id="keyword" />
-                  Keyword
-                </label>
-              </div>
-              <div class="control">
-                <label class="radio">
-                  <input type="radio" name="answer" id="author" />
-                  Author
-                </label>
-              </div>
-            </div>
-          </form>
-          <div id="search-results">
-            <div class="card" id="search-result">
+          <div id="purchased-scripts">
+            <div class="card" id="purchased-script">
               <div class="card-content">
                 <div class="content">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -125,8 +94,7 @@
                 </div>
               </div>
               <footer class="card-footer">
-                <a href="#" class="card-footer-item">Add to Cart</a>
-                <a href="#" class="card-footer-item">Add to Wishlist</a>
+                <a href="#" class="card-footer-item">View</a>
               </footer>
             </div>
             <br />
