--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,4 +76,17 @@ body {
     color:  #565656;
     cursor: pointer;
 }
+.menu {
+    font-weight:12px;
+    background-color: #B19DD0 ;
+    border-radius: 20px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.menu-list {
+border-radius: 25px;
+}
+#welcome {
+    border-top-left-radius: 25px;
+}
 
