adjusted side nav to fit page

--- a/public/templates/agent-home.html
+++ b/public/templates/agent-home.html
@@ -60,7 +60,7 @@
     </nav>
 
     <div class="columns is-mobile" id="main">
-      <div class="column is-one-quarter is-tablet" id="menu-sidebar">
+      <div class="column is-2 is-tablet" id="menu-sidebar">
         <aside class="menu">
           <ul class="menu-list">
             <li><a class="is-size-5 is-size-6-mobile">Browse</a></li>
