--- a/public/templates/agent-browse.html
+++ b/public/templates/agent-browse.html
@@ -19,7 +19,7 @@
   <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a href="https://bulma.io">
+        <a href="#">
           <img src="../../assets/logo.png" width="80" id="logo-img" />
         </a>
 
