--- a/public/templates/writer-workspace.html
+++ b/public/templates/writer-workspace.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.cdnfonts.com/css/bebas-neue" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/9819181378.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -62,16 +66,18 @@
     <main>
       <div id="workspace">
         <h1
-          class="is-size-2 is-size-4-mobile has-text-weight-bold pb-5 pl-5"
+          class="is-size-2 is-size-4-mobile has-text-weight-bold pl-5"
           id="purchased-title"
         >
           Workspace
         </h1>
         <div class="pl-5 pr-5 columns">
           <div class="column">
-            <button class="button is-normal is-responsive" id="create-button">
+            <a class="fa-solid fa-plus fa-lg" id="create-button"></a>
+            <a class="fa-solid fa-floppy-disk fa-lg" id="save-button"></a>
+            <!-- <button class="button is-normal is-responsive" id="create-button">
               Create new script
-            </button>
+            </button> -->
           </div>
         </div>
         <div class="pl-5 pr-5 columns">
