--- a/public/templates/homepage.html
+++ b/public/templates/homepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.cdnfonts.com/css/bebas-neue" rel="stylesheet" />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
@@ -13,19 +13,22 @@
       src="https://kit.fontawesome.com/9819181378.js"
       crossorigin="anonymous"
     ></script>
+    <link href="https://fonts.cdnfonts.com/css/bebas-neue" rel="stylesheet" />
+
     <link rel="stylesheet" href="../css/style.css" />
     <title>Scriptomatic - Homepage</title>
   </head>
   <body>
-    <nav class="main-nav">
-      <div class="columns has-text-centered">
-        <a class="column is-narrow" href="our website" id="logo">
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <a href="#">
           <img src="../../assets/logo.png" width="80" id="logo-img" />
         </a>
       </div>
     </nav>
+
     <main class="container main-container">
-      <h1 class="column is-size-1 has-text-weight-bold" id="title">
+      <h1 class="column is-size-1 has-text-weight-bold pl-0" id="main-title">
         SCRIPTOMATIC
       </h1>
       <div class="columns is-multiline is-tablet">
