changed handlebars navigation approach

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,12 +1,12 @@
-<nav class="main-nav">
-    <div class="columns has-text-centered">
-    <a class="column is-narrow" href="our website" id="logo">
-        <img src="../../assets/logo.png" width="80" id="logo-img" />
-    </a>
+<nav class="navbar" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <a href="#">
+          <img src="./assets/logo.png" width="80" id="logo-img" />
+        </a>
     </div>
 </nav>
 <main class="container main-container">
-    <h1 class="column is-size-1 has-text-weight-bold" id="title">
+    <h1 class="column is-size-1 has-text-weight-bold pl-0" id="main-title">
     SCRIPTOMATIC
     </h1>
     <div class="columns is-multiline is-tablet">
