--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
         href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
     />
     <link rel="stylesheet" href="../css/style.css" />
-    <title>Scriptomatic - Agent</title>
+    <title>Scriptomatic</title>
 </head>
 <body>
     {{{ body }}}
