added handlebars for agent pages

--- a/views/agent-browse.handlebars
+++ b/views/agent-browse.handlebars
@@ -1,7 +1,7 @@
 {{> loggedin-nav}}
 
 <div class="columns is-mobile" id="main">
-    {{> writer-menu}}
+    {{> agent-menu}}
 
-    {{> writer-posted}}
+    {{> agent-browse}}
 </div> 
