--- a/views/partials/writer-menu.handlebars
+++ b/views/partials/writer-menu.handlebars
@@ -3,7 +3,7 @@
         <ul class="menu-list">
         <li><a {{#if posted}}class="is-size-5 is-size-6-mobile is-active"{{else}}class="is-size-5 is-size-6-mobile"{{/if}} href="/writer/posted">Posted Scripts</a></li>
         <li><a class="is-size-5 is-size-6-mobile" href="/writer/workspace">Workspace</a></li>
-        <li><a class="is-size-5 is-size-6-mobile">View Messages</a></li>
+        <li><a class="is-size-5 is-size-6-mobile" href="/writer/messages">View Messages</a></li>
         </ul>
     </aside>
 </div>
