--- a/views/writer-messages.handlebars
+++ b/views/writer-messages.handlebars
@@ -1,7 +1,6 @@
 {{> loggedin-nav}}
 
 <div class="columns is-mobile" id="main">
-    {{> writer-menu}}
-
-    {{> writer-posted}}
+    
+    {{> messages}}
 </div> 
