--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,301 +1,313 @@
 <nav class="main-nav">
-    <div class="columns has-text-centered">
-    <a class="column is-narrow" href="our website" id="logo">
-        <img src="../../assets/logo.png" width="80" id="logo-img" />
-    </a>
-    </div>
+  <div class="columns has-text-centered">
+    {{!-- <a class="column is-narrow" href="our website" id="logo">
+      <img src="../../assets/logo.png" width="80" id="logo-img" />
+    </a> --}}
+  </div>
 </nav>
 <main class="container main-container">
-    <h1 class="column is-size-1 has-text-weight-bold" id="title">
+  <h1 class="column is-size-1 has-text-weight-bold" id="title">
     SCRIPTOMATIC
-    </h1>
-    <div class="columns is-multiline is-tablet">
+  </h1>
+  <div class="columns is-multiline is-tablet">
     <div class="column is-two-fifths">
-        <h2 class="is-size-3 is-size-4-mobile pb-4">
+      <h2 class="is-size-3 is-size-4-mobile pb-4">
         Find the scripts you need
-        </h2>
-        <p>
+      </h2>
+      <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
         asperiores eveniet vitae similique possimus voluptate, voluptates
         officiis consequuntur consectetur maxime ratione aperiam odit harum
         dicta temporibus illum alias sint error!
-        </p>
+      </p>
     </div>
     <div class="column" id="login">
-        <h1 class="is-size-3 is-size-4-mobile pb-4">Log in</h1>
-        <form class="box">
+      <h1 class="is-size-3 is-size-4-mobile pb-4">Log in</h1>
+      <form class="box" method="POST" action="/api/users/login">
         <div class="field">
-            <label class="label">Email</label>
-            <div class="control">
+          <label class="label">Email</label>
+          <div class="control">
             <input
-                class="input"
-                type="email"
-                placeholder="e.g. alex@example.com"
+              class="input"
+              type="email"
+              name="emailAddress"
+              placeholder="e.g. alex@example.com"
             />
-            </div>
+          </div>
         </div>
 
         <div class="field">
-            <label class="label">Password</label>
-            <div class="control">
-            <input class="input" type="password" placeholder="********" />
-            </div>
+          <label class="label">Password</label>
+          <div class="control">
+            <input class="input" type="password" name="password" placeholder="********" />
+          </div>
         </div>
 
-        <button class="button is-primary">Log in</button>
-        </form>
+        <button type="submit" class="button is-primary">Log in</button>
+      </form>
     </div>
     <div class="column" id="signup">
-        <h1 class="is-size-3 is-size-4-mobile pb-4">Sign up</h1>
-        <form class="box">
+      <h1 class="is-size-3 is-size-4-mobile pb-4">Sign up</h1>
+      <form class="box" method="POST" action="/api/users/">
         <div class="columns has-text-centered">
-            <div class="column is-half">
-            <input
-                type="radio"
-                id="writer"
-                name="user-type"
-                value="writer"
-            />
+          <div class="column is-half">
+            <input type="radio" id="writer" name="roleTitle" value="writer" />
             <label for="writer">Writer</label>
-            </div>
-            <div class="column">
-            <input type="radio" id="agent" name="user-type" value="agent" />
+          </div>
+          <div class="column">
+            <input type="radio" id="agent" name="roleTitle" value="agent" />
             <label for="agent">Agent</label>
-            </div>
+          </div>
         </div>
 
         <div class="field">
-            <label class="label">First Name</label>
-            <div class="control">
+          <label class="label">First Name</label>
+          <div class="control">
             <input
-                class="input"
-                type="first-name"
-                placeholder="e.g. John"
+              class="input"
+              type="text"
+              name="firstName"
+              placeholder="e.g. John"
             />
-            </div>
+          </div>
         </div>
         <div class="field">
-            <label class="label">Last Name</label>
-            <div class="control">
-            <input class="input" type="last-name" placeholder="e.g. Doe" />
-            </div>
-        </div>
-        <div class="field">
-            <label class="label">Email</label>
-            <div class="control">
+          <label class="label">Last Name</label>
+          <div class="control">
             <input
-                class="input"
-                type="email"
-                placeholder="e.g. alex@example.com"
+              class="input"
+              type="text"
+              name="lastName"
+              placeholder="e.g. Doe"
             />
-            </div>
+          </div>
+        </div>
+        <div class="field">
+          <label class="label">Email</label>
+          <div class="control">
+            <input
+              class="input"
+              type="email"
+              name="emailAddress"
+              placeholder="e.g. alex@example.com"
+            />
+          </div>
         </div>
 
         <div class="field">
-            <label class="label">Password</label>
-            <div class="control">
-            <input class="input" type="password" placeholder="********" />
-            </div>
+          <label class="label">Password</label>
+          <div class="control">
+            <input
+              class="input"
+              type="password"
+              name="password"
+              placeholder="********"
+            />
+          </div>
         </div>
 
-        <button class="button is-primary">Create new user</button>
-        </form>
+        <button type="submit" class="button is-primary">Create new user</button>
+      </form>
     </div>
-    </div>
+  </div>
 
-    <div class="columns is-multiline" id="testimonials">
+  <div class="columns is-multiline" id="testimonials">
     <div class="column is-full has-text-centered">
-        <h1 class="is-size-3 pb-4">Customer testimonials</h1>
+      <h1 class="is-size-3 pb-4">Customer testimonials</h1>
     </div>
     <div class="column is-half">
-        <div class="box">
+      <div class="box">
         <article class="media">
-            <div class="media-left">
+          <div class="media-left">
             <figure class="image is-64x64">
-                <img
+              <img
                 src="https://bulma.io/images/placeholders/128x128.png"
                 alt="Image"
-                />
+              />
             </figure>
-            </div>
-            <div class="media-content">
+          </div>
+          <div class="media-content">
             <div class="content">
-                <p>
-                <strong>John Smith</strong> <small>@johnsmith</small>
+              <p>
+                <strong>John Smith</strong>
+                <small>@johnsmith</small>
                 <small>31m</small>
                 <br />
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Aenean efficitur sit amet massa fringilla egestas. Nullam
-                condimentum luctus turpis.
-                </p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                efficitur sit amet massa fringilla egestas. Nullam condimentum
+                luctus turpis.
+              </p>
             </div>
             <nav class="level is-mobile">
-                <div class="level-left">
+              <div class="level-left">
                 <a class="level-item" aria-label="reply">
-                    <span class="icon is-small">
+                  <span class="icon is-small">
                     <i class="fas fa-reply" aria-hidden="true"></i>
-                    </span>
+                  </span>
                 </a>
                 <a class="level-item" aria-label="retweet">
-                    <span class="icon is-small">
+                  <span class="icon is-small">
                     <i class="fas fa-retweet" aria-hidden="true"></i>
-                    </span>
+                  </span>
                 </a>
                 <a class="level-item" aria-label="like">
-                    <span class="icon is-small">
+                  <span class="icon is-small">
                     <i class="fas fa-heart" aria-hidden="true"></i>
-                    </span>
+                  </span>
                 </a>
-                </div>
+              </div>
             </nav>
-            </div>
+          </div>
         </article>
-        </div>
+      </div>
     </div>
     <div class="column is-half">
-        <div class="box">
+      <div class="box">
         <article class="media">
-            <div class="media-left">
+          <div class="media-left">
             <figure class="image is-64x64">
-                <img
+              <img
                 src="https://bulma.io/images/placeholders/128x128.png"
                 alt="Image"
-                />
+              />
             </figure>
-            </div>
-            <div class="media-content">
+          </div>
+          <div class="media-content">
             <div class="content">
-                <p>
-                <strong>John Smith</strong> <small>@johnsmith</small>
+              <p>
+                <strong>John Smith</strong>
+                <small>@johnsmith</small>
                 <small>31m</small>
                 <br />
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Aenean efficitur sit amet massa fringilla egestas. Nullam
-                condimentum luctus turpis.
-                </p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                efficitur sit amet massa fringilla egestas. Nullam condimentum
+                luctus turpis.
+              </p>
             </div>
             <nav class="level is-mobile">
-                <div class="level-left">
+              <div class="level-left">
                 <a class="level-item" aria-label="reply">
-                    <span class="icon is-small">
+                  <span class="icon is-small">
                     <i class="fas fa-reply" aria-hidden="true"></i>
-                    </span>
+                  </span>
                 </a>
                 <a class="level-item" aria-label="retweet">
-                    <span class="icon is-small">
+                  <span class="icon is-small">
                     <i class="fas fa-retweet" aria-hidden="true"></i>
-                    </span>
+                  </span>
                 </a>
                 <a class="level-item" aria-label="like">
-                    <span class="icon is-small">
+                  <span class="icon is-small">
                     <i class="fas fa-heart" aria-hidden="true"></i>
-                    </span>
+                  </span>
                 </a>
-                </div>
+              </div>
             </nav>
-            </div>
+          </div>
         </article>
-        </div>
+      </div>
     </div>
     <div class="column is-half">
-        <div class="box">
+      <div class="box">
         <article class="media">
-            <div class="media-left">
+          <div class="media-left">
             <figure class="image is-64x64">
-                <img
+              <img
                 src="https://bulma.io/images/placeholders/128x128.png"
                 alt="Image"
-                />
+              />
             </figure>
-            </div>
-            <div class="media-content">
+          </div>
+          <div class="media-content">
             <div class="content">
-                <p>
-                <strong>John Smith</strong> <small>@johnsmith</small>
+              <p>
+                <strong>John Smith</strong>
+                <small>@johnsmith</small>
                 <small>31m</small>
                 <br />
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Aenean efficitur sit amet massa fringilla egestas. Nullam
-                condimentum luctus turpis.
-                </p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                efficitur sit amet massa fringilla egestas. Nullam condimentum
+                luctus turpis.
+              </p>
             </div>
             <nav class="level is-mobile">
-                <div class="level-left">
+              <div class="level-left">
                 <a class="level-item" aria-label="reply">
-                    <span class="icon is-small">
+                  <span class="icon is-small">
                     <i class="fas fa-reply" aria-hidden="true"></i>
-                    </span>
+                  </span>
                 </a>
                 <a class="level-item" aria-label="retweet">
-                    <span class="icon is-small">
+                  <span class="icon is-small">
                     <i class="fas fa-retweet" aria-hidden="true"></i>
-                    </span>
+                  </span>
                 </a>
                 <a class="level-item" aria-label="like">
-                    <span class="icon is-small">
+                  <span class="icon is-small">
                     <i class="fas fa-heart" aria-hidden="true"></i>
-                    </span>
+                  </span>
                 </a>
-                </div>
+              </div>
             </nav>
-            </div>
+          </div>
         </article>
-        </div>
+      </div>
     </div>
     <div class="column is-half">
-        <div class="box">
+      <div class="box">
         <article class="media">
-            <div class="media-left">
+          <div class="media-left">
             <figure class="image is-64x64">
-                <img
+              <img
                 src="https://bulma.io/images/placeholders/128x128.png"
                 alt="Image"
-                />
+              />
             </figure>
-            </div>
-            <div class="media-content">
+          </div>
+          <div class="media-content">
             <div class="content">
-                <p>
-                <strong>John Smith</strong> <small>@johnsmith</small>
+              <p>
+                <strong>John Smith</strong>
+                <small>@johnsmith</small>
                 <small>31m</small>
                 <br />
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Aenean efficitur sit amet massa fringilla egestas. Nullam
-                condimentum luctus turpis.
-                </p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                efficitur sit amet massa fringilla egestas. Nullam condimentum
+                luctus turpis.
+              </p>
             </div>
             <nav class="level is-mobile">
-                <div class="level-left">
+              <div class="level-left">
                 <a class="level-item" aria-label="reply">
-                    <span class="icon is-small">
+                  <span class="icon is-small">
                     <i class="fas fa-reply" aria-hidden="true"></i>
-                    </span>
+                  </span>
                 </a>
                 <a class="level-item" aria-label="retweet">
-                    <span class="icon is-small">
+                  <span class="icon is-small">
                     <i class="fas fa-retweet" aria-hidden="true"></i>
-                    </span>
+                  </span>
                 </a>
                 <a class="level-item" aria-label="like">
-                    <span class="icon is-small">
+                  <span class="icon is-small">
                     <i class="fas fa-heart" aria-hidden="true"></i>
-                    </span>
+                  </span>
                 </a>
-                </div>
+              </div>
             </nav>
-            </div>
+          </div>
         </article>
-        </div>
+      </div>
     </div>
-    </div>
+  </div>
 </main>
 <footer class="footer">
-    <div class="content has-text-centered">
+  <div class="content has-text-centered">
     <p>
-        <a href=" ">Terms</a>
-        <a href=" ">Privacy</a>
-        <a href=" ">Accessibility</a>
-        <a href=" ">Help</a>
+      <a href=" ">Terms</a>
+      <a href=" ">Privacy</a>
+      <a href=" ">Accessibility</a>
+      <a href=" ">Help</a>
     </p>
-    </div>
+  </div>
 </footer>
