Added partial for loggedin navigation

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a href="/">
-          <img src="./assets/logo.png" width="80" id="logo-img" />
+          <img src="../public/assets/logo.png" width="80" id="logo-img" />
         </a>
     </div>
 </nav>
@@ -31,7 +31,7 @@
               class="input"
               type="email"
               name="emailAddress"
-              placeholder="e.g. alex@example.com"
+              placeholder="e.g. email@example.com"
             />
           </div>
         </div>
@@ -89,7 +89,7 @@
               class="input"
               type="email"
               name="emailAddress"
-              placeholder="e.g. alex@example.com"
+              placeholder="e.g. email@example.com"
             />
           </div>
         </div>
