--- a/views/messages.handlebars
+++ b/views/messages.handlebars
@@ -1,6 +1,5 @@
 {{> loggedin-nav}}
 
 <div class="columns is-mobile" id="main">
-    
-    {{> messages}}
+    <div>Messages content goes here</div>
 </div> 
