--- a/public/templates/agent-purchased.html
+++ b/public/templates/agent-purchased.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.cdnfonts.com/css/bebas-neue" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <script
+      src="https://kit.fontawesome.com/9819181378.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
@@ -80,8 +80,21 @@
           >
             Purchased Scripts
           </h1>
+          <a>
+            <div class="card">
+              <header class="card-header">
+                <a class="card-header-title">Title</a>
+              </header>
+              <div class="card-content">
+                <div class="content">
+                  Description
 
-          <div id="purchased-scripts">
+                  <br />
+                </div>
+              </div>
+            </div>
+          </a>
+          <!-- <div id="purchased-scripts">
             <div class="card" id="purchased-script">
               <div class="card-content">
                 <div class="content">
@@ -98,7 +111,7 @@
               </footer>
             </div>
             <br />
-          </div>
+          </div> -->
         </div>
       </main>
     </div>
