--- a/views/partials/writer-posted.handlebars
+++ b/views/partials/writer-posted.handlebars
@@ -1,29 +1,16 @@
 <main class="column">
-    <div id="purchased" class="pl-4">
+    <div id="posted" class="pl-4">
         <h1
         class="is-size-2 is-size-4-mobile has-text-weight-bold pb-5"
-        id="purchased-title"
+        id="posted-title"
         >
         Posted Scripts
         </h1>
 
-        <div id="purchased-scripts">
-        <div class="card" id="purchased-script">
-            <div class="card-content">
-            <div class="content">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Phasellus nec iaculis mauris.
-                <a href="#">@bulmaio</a>. <a href="#">#css</a>
-                <a href="#">#responsive</a>
-                <br />
-                <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
-            </div>
-            </div>
-            <footer class="card-footer">
-            <a href="#" class="card-footer-item">View</a>
-            </footer>
-        </div>
-        <br />
+        <div id="posted-scripts">
+            {{#each scriptData as |script|}}
+                {{> script-card}}
+            {{/each}}
         </div>
     </div>
-</main>
+ </main>
