changed the buttons for workspace

--- a/views/partials/writer-workspace.handlebars
+++ b/views/partials/writer-workspace.handlebars
@@ -6,13 +6,7 @@
         >
           Workspace
         </h1>
-        <div class="pl-5 pr-5 columns">
-          <div class="column">
-            <button class="button is-normal is-responsive" id="create-button">
-              Create new script
-            </button>
-          </div>
-        </div>
+        
         <div class="pl-5 pr-5 columns">
           <div class="column is-one-third" id="draft-scripts">
             <div class="card" id="purchased-script">
@@ -45,6 +39,8 @@
                   ></textarea>
                 </div>
               </div>
+              <a class="fa-solid fa-plus fa-lg" id="create-button"></a>
+              <a class="fa-solid fa-floppy-disk fa-lg" id="save-button"></a>
             </form>
           </div>
         </div>
