Updated posted and purchased scripts handlebars

--- a/public/templates/writer-workspace.html
+++ b/public/templates/writer-workspace.html
@@ -73,8 +73,6 @@
         </h1>
         <div class="pl-5 pr-5 columns">
           <div class="column">
-            <a class="fa-solid fa-plus fa-lg" id="create-button"></a>
-            <a class="fa-solid fa-floppy-disk fa-lg" id="save-button"></a>
             <!-- <button class="button is-normal is-responsive" id="create-button">
               Create new script
             </button> -->
@@ -112,6 +110,14 @@
                   ></textarea>
                 </div>
               </div>
+              <button
+                class="fa-solid fa-plus fa-lg"
+                id="create-button"
+              ></button>
+              <button
+                class="fa-solid fa-floppy-disk fa-lg"
+                id="save-button"
+              ></button>
             </form>
           </div>
         </div>
