--- a/views/partials/agent-purchased.handlebars
+++ b/views/partials/agent-purchased.handlebars
@@ -9,7 +9,7 @@
 
         <div id="purchased-scripts">
         {{#each scriptData as |script|}}
-            {{> script-card}}
+            {{> scripts-card}}
         {{/each}}
         </div>
     </div>
