--- a/views/partials/writer-posted.handlebars
+++ b/views/partials/writer-posted.handlebars
@@ -9,7 +9,7 @@
 
         <div id="posted-scripts">
             {{#each scriptData as |script|}}
-                {{> script-card}}
+                {{> scripts-card}}
             {{/each}}
         </div>
     </div>
