--- a/views/partials/agent-browse.handlebars
+++ b/views/partials/agent-browse.handlebars
@@ -4,10 +4,10 @@
         <form id="search-script">
             <div class="field is-grouped">
                 <p class="control is-expanded">
-                <input class="input" type="text" placeholder="Find a script" />
+                    <input class="input search-bar" type="text" placeholder="Find a script" />
                 </p>
                 <p class="control">
-                <a class="button is-info"> Search </a>
+                <a class="button is-info search-button"> Search </a>
                 </p>
             </div>
 
@@ -15,7 +15,7 @@
                 <label class="label">Search by:&nbsp;</label>
                 <div class="control is-expended">
                 <label class="radio">
-                    <input type="radio" name="answer" id="genre" checked />
+                    <input type="radio" name="answer" id="genre" />
                     Genre
                 </label>
                 </div>
@@ -27,7 +27,7 @@
                 </div>
                 <div class="control">
                 <label class="radio">
-                    <input type="radio" name="answer" id="author" />
+                    <input type="radio" name="answer" id="author" checked/>
                     Author
                 </label>
                 </div>
@@ -49,3 +49,4 @@
         </div>
     </div>
 </main>
+<script type="application/x-javascript" src="js/agent-browse.js"></script>
