--- a/views/partials/script-info.handlebars
+++ b/views/partials/script-info.handlebars
@@ -1,24 +1,13 @@
-//Shows the full information for the script
+{{!-- //Shows the full information for the script --}}
 <main class="column">
     <div id="full-script-info" class="pl-4">
-        
-            <h1
-            class="is-size-2 is-size-4-mobile has-text-weight-bold pb-5"
-            id="script-title"
-            >
-            {{scriptData.title}}
-            </h1>
-
-            <section id="script-text">
-                {{scriptData.text}}     
-            </section>
-            <section>
-                `Written by: ${ {{scriptData.author.firstName}} {{scriptData.author.lastName}}.`
-            </section>
-            <footer>
-                <form>
- <input type="button" value="Go back!" onclick="history.back()">
-</form>
-            </footer>
+        <h1 class="is-size-2 is-size-4-mobile has-text-weight-bold pb-5" id="script-title">{{scriptData.title}}</h1>
+        <section id="script-text">{{scriptData.text}}</section>
+        <section>Written by: {{scriptData.Writer.firstName}} {{scriptData.Writer.lastName}}.</section>
+        <footer>
+            <form>
+                <input type="button" value="Go back!" onclick="history.back()">
+            </form>
+        </footer>
     </div>
 </main>
