Fixed workspace page not loading properly

--- a/views/partials/draft-card.handlebars
+++ b/views/partials/draft-card.handlebars
@@ -1,15 +1,13 @@
 <div class="card" id="purchased-script">
     <header class="card-header">
-        <p class="card-header-title script-title">{{title}}</p>
+        <p class="card-header-title">{{title}}</p>
     </header>
     <div class="card-content">
-        <div class="content script-description">
+        <div class="content">
             {{description}}
         </div>
     </div>
     <footer class="card-footer">
-        <a href="/api/scripts/edit/{{id}}" class="card-footer-item edit-button" data-id={{id}}>Edit</a>
+        <button class="card-footer-item edit-button" data-id={{id}}>Edit</button>
     </footer>
 </div>
-
-{{!-- <script type="application/x-javascript" src="js/draft-card.js"></script> --}}
