Fixed agents browse page

--- a/views/full-script.handlebars
+++ b/views/full-script.handlebars
@@ -1,5 +1,18 @@
-{{> loggedin-nav}}
-
 <div class="columns is-mobile" id="main">
-    {{> script-info}}
-</div> 
+  {{! //Shows the full information for the script }}
+  <main class="column">
+    <div id="full-script-info" class="pl-4">
+      <h1
+        class="is-size-2 is-size-4-mobile has-text-weight-bold pb-5"
+        id="script-title"
+      >{{scriptData.title}}</h1>
+      <section id="script-text">{{scriptData.text}}</section>
+      <section>Written by:
+        {{scriptData.Writer.firstName}}
+        {{scriptData.Writer.lastName}}.</section>
+      <footer>
+        <button onclick="history.back()">Go back!</button>
+      </footer>
+    </div>
+  </main>
+</div>
