--- a/views/agent-browse.handlebars
+++ b/views/agent-browse.handlebars
@@ -1,7 +1,47 @@
-{{> loggedin-nav}}
-
 <div class="columns is-mobile" id="main">
     {{> agent-menu}}
 
-    {{> agent-browse}}
+    <main class="column">
+    <div id="browse" class="pl-4">
+        <h1 class="is-size-2 is-size-4-mobile has-text-weight-bold pb-5" id="browse-title">Browse</h1>
+        <form id="search-script">
+            <div class="field is-grouped">
+                <p class="control is-expanded">
+                    <input class="input search-bar" type="text" placeholder="Find a script" />
+                </p>
+                <p class="control">
+                <a class="button is-info search-button"> Search </a>
+                </p>
+            </div>
+
+            <div class="field is-grouped">
+                <label class="label">Search by:&nbsp;</label>
+                <div class="control is-expended">
+                <label class="radio">
+                    <input type="radio" name="answer" id="genre" />
+                    Genre
+                </label>
+                </div>
+                <div class="control">
+                <label class="radio">
+                    <input type="radio" name="answer" id="keyword" />
+                    Keyword
+                </label>
+                </div>
+                <div class="control">
+                <label class="radio">
+                    <input type="radio" name="answer" id="author" checked/>
+                    Author
+                </label>
+                </div>
+            </div>
+        </form>
+        <div id="search-results">
+            {{#each scriptData as |script|}}
+                {{> agent-browse}}
+            {{/each}}
+        </div>
+    </div>
+    </main>
+<script type="application/x-javascript" src="js/agent-browse.js"></script>
 </div> 
