--- a/views/partials/writer-posted.handlebars
+++ b/views/partials/writer-posted.handlebars
@@ -19,5 +19,8 @@
       {{!-- <p><em>Published on {{format_date updatedAt}}</em></p> --}}
     </div>
   </div>
+  <footer class="card-footer">
+    <a href="/api/scripts/view/{{id}}" class="card-footer-item">View</a>
+  </footer>
 </div>
        
