Fixed full-script page to display appropriate menu-bar

--- a/views/full-script.handlebars
+++ b/views/full-script.handlebars
@@ -1,5 +1,11 @@
+{{> loggedin-nav}}
+
 <div class="columns is-mobile" id="main">
+  {{#if (eq userRole "writer")}}
   {{> writer-menu}}
+  {{else}}
+  {{> agent-menu}}
+  {{/if}}
 
   <main class="column">
     <a href="#" onclick="history.back()">
