--- a/views/writer-posted.handlebars
+++ b/views/writer-posted.handlebars
@@ -1,4 +1,6 @@
-<div class="columns is-mobile" id="main">
+{{> loggedin-nav}}
+
+<div class="columns is-mobile is-flex" id="main">
     {{> writer-menu}}
 
     <main class="column">
